fixing wrong color

--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -690,7 +690,7 @@ ul.row {
 }
 
 .nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-white);
+    background-color: var(--color-primary);
     width: 100%;
 }
 
